--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,26 +15,33 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '9.0.x'
-          
+
       - name: Restore dependencies
         run: dotnet restore EchoesOfAshWeb
-        
+
       - name: Build
         run: dotnet build EchoesOfAshWeb --configuration Release --no-restore
-        
+
       - name: Publish
         run: dotnet publish EchoesOfAshWeb --configuration Release --no-build -o publish
-        
+
       - name: Create .nojekyll file
         run: touch publish/wwwroot/.nojekyll
-        
+
       - name: Update base href
         run: |
           sed -i 's|<base href="/" />|<base href="/EchoesOfAsh/" />|g' publish/wwwroot/index.html
-        
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: publish/wwwroot
-          branch: gh-pages
-          clean: true
+
+      - name: Copy to docs directory
+        run: |
+          rm -rf docs
+          mkdir -p docs
+          cp -r publish/wwwroot/* docs/
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add docs
+          git commit -m "Update GitHub Pages content" || echo "No changes to commit"
+          git push
